--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -466,6 +466,8 @@
 // --
 @tag-default-bg: @background-color-light;
 @tag-default-color: @text-color;
+@tag-selected-bg: @primary-1;
+@tag-selected-color: @primary-color;
 @tag-font-size: @font-size-sm;
 
 // TimePicker
