--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -333,6 +333,11 @@
 @input-disabled-bg: @disabled-bg;
 @input-outline-offset: 0 0;
 
+// Scrollbar
+// ---
+@scrollbar-background: rgba(144, 147, 153, .3);
+@scrollbar-hover-background: rgba(144, 147, 153, .5);
+
 // Select
 // ---
 @select-border-color: @border-color-base;
